--- a/functions/quick-app/package.json
+++ b/functions/quick-app/package.json
@@ -4,6 +4,10 @@
 	"main": "index.js",
 	"author": "carlos.s+one@zohotest.com",
 	"dependencies": {
+		"@faker-js/faker": "^7.6.0",
+		"express": "^4.18.2",
+		"formidable": "^2.1.1",
+		"js-yaml": "^4.1.0",
 		"zcatalyst-sdk-node": "latest"
 	}
 }
