--- a/functions/quick-app/package.json
+++ b/functions/quick-app/package.json
@@ -2,7 +2,7 @@
 	"name": "quick-app",
 	"version": "1.0.0",
 	"main": "index.js",
-	"author": "carlos.s+one@zohotest.com",
+	"author": "carlos.s+crt0@zohotest.com",
 	"dependencies": {
 		"@faker-js/faker": "^7.6.0",
 		"express": "^4.18.2",
