--- a/functions/quick-app/package.json
+++ b/functions/quick-app/package.json
@@ -5,6 +5,7 @@
 	"author": "carlos.s+crt0@zohotest.com",
 	"dependencies": {
 		"@faker-js/faker": "^7.6.0",
+		"exceljs": "^4.3.0",
 		"express": "^4.18.2",
 		"formidable": "^2.1.1",
 		"js-yaml": "^4.1.0",
